<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:motion="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="representativeViewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel"/>
    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:id="@+id/search_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginBottom="@dimen/half_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textStyle="bold"
                android:textSize="@dimen/default_header_size"
                android:text="@string/representatives_search_header"/>

            <EditText
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:autofillHints="@string/representatives_address_1"
                android:hint="@string/representatives_address_1"
                android:text="@{representativeViewModel.address.line1}"
                android:inputType="textPostalAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title" />

            <EditText
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:hint="@string/representatives_address_2"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.address.line2}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1" />

            <EditText
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:hint="@string/representatives_city"
                android:autofillHints=""
                android:inputType="textPostalAddress"
                android:text="@{representativeViewModel.address.city}"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintTop_toBottomOf="@id/address_line_2" />

            <Spinner
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/half_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:autofillHints=""
                android:entries="@array/states"
                android:inputType="textPostalAddress"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city"
                app:stateValue="@{representativeViewModel.address.state}"/>

            <EditText
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:hint="@string/representatives_zip"
                android:autofillHints=""
                android:text="@{representativeViewModel.address.zip}"
                android:inputType="number"
                android:maxLength="5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintTop_toBottomOf="@id/city" />

            <Button
                android:id="@+id/button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_button"
                android:layout_marginEnd="@dimen/default_button"
                android:text="@string/button_search_header"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <Button
                android:id="@+id/button_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginBottom="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_button"
                android:layout_marginEnd="@dimen/default_button"
                android:text="@string/button_location_header"
                app:layout_constraintTop_toBottomOf="@id/button_search" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/search_menu"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/representative_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_margin"
                android:layout_marginStart="@dimen/default_margin"
                android:textStyle="bold"
                android:textSize="@dimen/default_header_size"
                android:text="@string/representatives_header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/representatives_list"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="@dimen/default_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                tools:listitem="@layout/representative_list_item" />

            <TextView
                android:id="@+id/list_placeholder"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:visibility="gone"
                motion:visibilityMode="ignore"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>