<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="voterInfoViewModel"
            type="com.example.android.politicalpreparedness.election.info.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:titleTextColor="@color/white"
            android:padding="@dimen/default_padding"
            android:singleLine="true"
            app:title="@{voterInfoViewModel.voterInfo.election.name}"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/election_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            android:text="@{voterInfoViewModel.voterInfo.election.electionDay.toString()}"
            android:textSize="@dimen/default_text_size"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/election_date"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@{voterInfoViewModel.voterInfo.election.division.state}"
            android:textSize="@dimen/default_text_size"
            tools:text="Michigan"/>

        <TextView
            android:id="@+id/election_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            android:padding="@dimen/default_padding"
            android:text="@string/election_info_header"
            android:textSize="@dimen/default_h2"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/state_header" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/election_info"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintBottom_toTopOf="@id/state_ballot"
            tools:visibility="visible"
            android:text="@string/voting_locations_text"
            tools:text="Voting Locations"/>

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_padding"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            tools:visibility="visible"
            android:text="@string/voting_ballot_text"
            tools:text="Voting ballot"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="state_correspondence_header,address" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/state_ballot"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@{voterInfoViewModel.voterInfo.pollingLocations}"/>

        <Button
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/saved_button_follow"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>